--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 api_key: 
-api_base: http://127.0.0.1:1234/v1
-model: jade_qwen3_4b_mlx
+api_base: http://192.168.1.177:1234/v1
+model: Qwen/Qwen3-30B-A3B-2507
 context_max_tokens: 31768
 assistant_minimum_context_tokens: 8192
 should_stream: true
